tests/NormalTests/paczka1/fuzzy1/40824245.err
Error in line 6: aGTOfSPA A96 36,3
Error in line 3: 5Yg0txFVV A96 86,7
Error in line 12: aGTOfSPA A917 71,68
Error in line 9: aGTOfSPA S930 30,5
Error in line 13: aGTOfSPA A96 35,6
Error in line 11: XX2e S930 47,6
Error in line 4: ABx74 S930 54,0
Error in line 10: 5Yg0txFVV A917 7,8
Error in line 24: A96 A96 64,1
Error in line 18: XX2e A917 71,1
